[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Rodney Sampson <rodneysampsoniv@gmail.com>"]
description = ""
name = "uptact"
version = "0.1.0"
[tool.poetry.dependencies]
django = "^3.0.5"
django-debug-toolbar = "^2.2"
django-environ = "^0.4.5"
django-extensions = "^2.2.9"
django-localflavor = "^3.0.1"
django-registration-redux="^2.5"
python = "^3.8"
werkzeug = "^1.0.1"
[tool.poetry.dev-dependencies]
mypy = "^0.770"
prospector = "^1.2.0"
pytest = "^5.4.1"
yapf = "^0.29.0"
